--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,8 @@ spring.jpa.show-sql = true
 # Hibernate ddl auto (create, create-drop, update)
 spring.jpa.hibernate.ddl-auto = none
 
+spring.jpa.hibernate.use-new-id-generator-mappings=false
+
 # Naming strategy
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
